--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jinq",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Lazy loaded LINQ in JavaScript",
-  "main": "index.js",
+  "main": "jinq.js",
+  "type": "module",
   "scripts": {
+    "build": "",
     "test": "jest"
   },
-  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
