--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jinq",
   "version": "2.0.1",
   "description": "Lazy loaded LINQ in JavaScript",
-  "main": "jinq.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "build": "",
