:art: Initial TS types

--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "jinq",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Lazy loaded LINQ in JavaScript",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "scripts": {
     "build": "",
     "test": "jest"
