--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jinq",
   "version": "2.0.2",
-  "description": "Lazy loaded LINQ in JavaScript",
+  "description": "JavaScript Integrated Query for generators and arrays. Inspired by LINQ",
   "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
